--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amiko&display=swap" rel="stylesheet">
 </head>
 
 
@@ -54,7 +56,7 @@
 				<span class="icon icon-bar"></span>
 			</button>
 
-			<a href="index.html" class="navbar-brand logo"><class="bold">M</a>
+			<a href="index.html" class="navbar-brand logo">M</a>
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
@@ -78,11 +80,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<h1 class="selected-work-text">MICHELLE KIM</h1>
-				<h2 class="subheading selected-work">UX Designer, Graduating from University of Michigan in May 2020</h2>
+				<h1 class="selected-work-text">MY WORK</h1>
+				<!-- <h2 class="selected-work">UX Designer, Graduating from University of Michigan in May 2020</h2> -->
 				<!-- ISO section -->
 				<div class="iso-section">
-					<ul class="filter-wrapper clearfix">
+					<ul class="filter-wrapper clearfix amiko">
                    		 <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
                    		 <li><a href="#" class="opc-main-bg" data-filter=".design">UX DESIGN</a></li>
                    		 <li><a href="#" class="opc-main-bg" data-filter=".research">UX RESEARCH</a></li>
@@ -90,131 +92,69 @@
 
                		</ul>
 
-									<!-- <div class="app">
-									  <ul class="hs full no-scrollbar">
-									    <li class="item" id="second">
-												<a href="lexmark.html" class="image">
-    											<img src="images/lexmarktransparent.png" alt="Lexmark">
-  											</a>
-  											<div class="content">
-													<h2>Lexmark</h2>
-									 				<h4>Internship | UX Design</h4>
-  											</div>
-											</li>
-
-											<li class="item" id="first">
-												<a href="vegout.html" class="image">
-													<img src="images/vegouttransparent.png" alt="VegOut">
-												</a>
-												<div class="content">
-													<h2>Veg Out</h2>
-													<h4>Passion Project | Product Design</h4>
-												</div>
-											</li>
-											<li class="item" id="third">
-												<a href="cnbc.html" class="image">
-													<img src="images/cnbctransparent.png" alt="CNBC">
-												</a>
-												<div class="content">
-													<h2>CNBC</h2>
-													<h4>Group Project | UX Research</h4>
-												</div>
-											</li>
-											<li class="item" id="fourth">
-												<a href="garden.html" class="image">
-													<img src="images/veggardentransparent.png" alt="Veg Garden">
-												</a>
-												<div class="content">
-													<h2>Veg Garden</h2>
-													<h4>Group Project | VR Design</h4>
-												</div>
-											</li>
-											<li class="item" id="fifth">
-												<a href="gintern.html" class="image">
-													<img src="images/google2transparent.png" alt="google">
-												</a>
-												<div class="content">
-													<h2>Uvent</h2>
-													<h4>Google Design Challenge | UX Design</h4>
-												</div>
-											</li>
-											<li class="item" id="sixth">
-												<a href="comerica.html" class="image">
-													<img src="images/comerica2transparent.png" alt="Comerica">
-												</a>
-												<div class="content">
-													<h2>Comerica</h2>
-													<h4>Group Project | UX Research</h4>
-												</div>
-											</li>
-											<li class="item" id="seventh">
-												<a href="michiagnmed.html" class="image">
-													<img src="images/michiganmed2transparent.png" alt="Michigan Med">
-												</a>
-												<div class="content">
-													<h2>Michigan Medicine</h2>
-													<h4>Group Project | UX Research</h4>
-												</div>
-											</li>
-									  </ul>
-									</div> -->
-
-
 
 
                		<div class="wow fadeIn" data-wow-delay="0.4s">
                			<div class="iso-box-wrapper col4-iso-box">
-											<div class="content iso-box design col-lg-4 col-md-6 col-sm-6 col-xs-12" id="second" onclick="location.href='lexmark.html'">
+											<div class="content iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="second" onclick="location.href='lexmark.html'">
 											 <a href="lexmark.html" ><img src="images/lexmarktransparent.png" alt="Veg Out"></a>
-											 <!-- <div class="selectedprojects-des"> -->
+											 <div class="selectedprojects-des">
 			 <h2>Lexmark</h2>
 			 <h4>Internship | UX Design</h4>
 		 </div>
+	 </div>
 
-               				 <div class="left content iso-box design col-lg-4 col-md-6 col-sm-6 col-xs-12" id="first" onclick="location.href='vegout.html'">
+               				 <div class="left content iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="first" onclick="location.href='vegout.html'">
                				 	<a href="vegout.html" data-lightbox-gallery="portfolio-gallery"><img src="images/vegouttransparent.png" alt="Veg Out"></a>
-												<!-- <div class="selectedprojects-des"> -->
+												<div class="selectedprojects-des">
 				<h2>Veg Out</h2>
 				<h4>Passion Project | Product Design</h4>
 			</div>
+		</div>
 
-			<div class="content iso-box design research col-lg-4 col-md-6 col-sm-6 col-xs-12" id="ninth" onclick="location.href='garden.html'">
+			<div class="content iso-box design research col-lg-4 col-md-4 col-sm-6 col-xs-12" id="ninth" onclick="location.href='garden.html'">
 			 <a href="pawls.html" ><img src="images/pawls.png" alt="Veg Out"></a>
-			 <!-- <div class="selectedprojects-des"> -->
+			 <div class="selectedprojects-des">
 			<h2>PAWLS</h2>
 			<h4>Course Project | Product Design</h4>
 			</div>
+		</div>
 
-				<div class="research content iso-box design col-lg-4 col-md-6 col-sm-6 col-xs-12" id="third" onclick="location.href='cnbc.html'">
+				<div class="research content iso-box design col-lg-4 col-md-4 col-sm-6 col-xs-12" id="third" onclick="location.href='cnbc.html'">
 				 <a href="cnbc.html" ><img src="images/cnbctransparent.png" alt="Veg Out"></a>
-				 <!-- <div class="selectedprojects-des"> -->
+				 <div class="selectedprojects-des">
 <h2>CNBC</h2>
 <h4>Client Project | UX Research</h4>
 </div>
+</div>
 
-<div class="content iso-box arvr col-lg-4 col-md-6 col-sm-6 col-xs-12" id="fourth" onclick="location.href='garden.html'">
+<div class="content iso-box arvr col-lg-4 col-md-4 col-sm-6 col-xs-12" id="fourth" onclick="location.href='garden.html'">
  <a href="garden.html" ><img src="images/veggardentransparent.png" alt="Veg Out"></a>
- <!-- <div class="selectedprojects-des"> -->
+ <div class="selectedprojects-des">
 <h2>Garden</h2>
 <h4>Course Project | VR Design</h4>
 </div>
-<div class="content iso-box arvr col-lg-4 col-md-6 col-sm-6 col-xs-12" id="eighth" onclick="location.href='garden.html'">
+</div>
+<div class="content iso-box arvr col-lg-4 col-md-4 col-sm-6 col-xs-12" id="eighth" onclick="location.href='garden.html'">
  <a href="brewary.html" ><img src="images/brewery.png" alt="Veg Out"></a>
- <!-- <div class="selectedprojects-des"> -->
+ <div class="selectedprojects-des">
 <h2>brewARy</h2>
 <h4>Course Project | AR Design</h4>
 </div>
-<div class="design content iso-box col-lg-4 col-md-6 col-sm-6 col-xs-12" id="fifth" onclick="location.href='gintern.html'">
+</div>
+<div class="design content iso-box col-lg-4 col-md-4 col-sm-6 col-xs-12" id="fifth" onclick="location.href='gintern.html'">
  <a href="gintern.html" ><img src="images/google2transparent.png" alt="Veg Out"></a>
- <!-- <div class="selectedprojects-des"> -->
+ <div class="selectedprojects-des">
 <h2>Uvent</h2>
 <h4>Google Design Challenge | UX Design</h4>
 </div>
-<div class="research content iso-box col-lg-4 col-md-6 col-sm-6 col-xs-12" id="sixth" onclick="location.href='comerica.html'">
+</div>
+<div class="research content iso-box col-lg-4 col-md-4 col-sm-6 col-xs-12" id="sixth" onclick="location.href='comerica.html'">
  <a href="comerica.html" ><img src="images/comerica2transparent.png" alt="Veg Out"></a>
- <!-- <div class="selectedprojects-des"> -->
+ <div class="selectedprojects-des">
 <h2>Comerica</h2>
 <h4>Client Project | UX Research</h4>
+</div>
 </div>
 
 <!-- <div class="content iso-box research col-lg-6 col-md-6 col-sm-6 col-xs-6" id="seventh" onclick="location.href='michiganmed.html'">
