--- a/lexmark.html
+++ b/lexmark.html
@@ -11,6 +11,8 @@
 	  gtag('config', 'UA-144593656-1');
 	</script>
 
+	<script src="https://kit.fontawesome.com/e1df481073.js" crossorigin="anonymous"></script>
+
 	<!-- SITE TITLE -->
 	<title>Lexmark</title>
 
@@ -32,6 +34,7 @@
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
 	<!-- navigation section -->
+	
 <section id="navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
@@ -52,6 +55,8 @@
 	</div>
 </section>
 
+<button style="font-size:24px" onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-alt-circle-up"></i>
+</button>
 
 <!-- about section -->
 	<section id="about">
@@ -141,6 +146,8 @@
 					<br><br>
 		</div>
 </section>
+
+
 
 
 <!-- about section -->
@@ -554,7 +561,13 @@
 
 <script>
 var prevScrollpos = window.pageYOffset;
+
 window.onscroll = function() {
+    navFunction();
+    scrollFunction();
+};
+
+function navFunction() {
 var currentScrollPos = window.pageYOffset;
   if (prevScrollpos > currentScrollPos) {
     document.getElementById("navbar").style.top = "0";
@@ -563,6 +576,27 @@ var currentScrollPos = window.pageYOffset;
   }
   prevScrollpos = currentScrollPos;
 }
+
+
+//Get the button:
+mybutton = document.getElementById("myBtn");
+
+// When the user scrolls down 20px from the top of the document, show the button
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0; // For Safari
+  document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+}
+
 </script>
 
 </body>
