--- a/gintern.html
+++ b/gintern.html
@@ -63,6 +63,14 @@
 		</div>
 	</section>
 
+
+	<div class="progress-wrap">
+		<svg class="progress-circle" width="100%" height="100%" viewBox="-1 -1 102 102">
+			<path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98"/>
+		</svg>
+	</div>
+
+	
 <!-- about section -->
 	<section id="about">
 		<div class="container">
