--- a/garden.html
+++ b/garden.html
@@ -36,22 +36,18 @@
 <section id="navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
-
 			<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-
-			<a href="index.html" class="navbar-brand logo"><class="bold">M</a>
+			<a href="index.html" class="navbar-brand">MICHELLE KIM</a>
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="index.html#work" >WORK</a></li>
-				<li><a href="index.html#about">ABOUT</a></li>
-				<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
+				<li><a href="#work">WORK</a></li>
+				<li><a href="#about">ABOUT</a></li>
 				<li><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf" class="smoothScroll">RESUME</a></li>
-
 			</ul>
 		</div>
 	</div>
@@ -106,13 +102,13 @@
 			<div class= "row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4 class="subheading">Project Context</h4>
-					<p> During Oct 2019, for a course project, my team created a virtual reality app that can be experienced through Google Cardboard. Each team member was responsible for a different part of the application. My role is highlighted above. If you want to skip the process, the video of the final prototype can be found <a href="#lexmark3">here</a>.<br><br><br>
+					<p> During Oct 2019, for a course project, my team created a virtual reality app that can be experienced through Google Cardboard. Each team member was responsible for a different part of the application. My role is highlighted above. If you want to skip the process, the video of the final prototype can be found <a href="#video">here</a>.<br><br><br>
 						<br>
 				</div>
 			</div>
 		</section>
 
-		<section id="lexmark1">
+		<section class="graybg">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
@@ -141,7 +137,7 @@
 										<div>
 		</section>
 
-		<section id="lexmark2">
+		<section class="graybg">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
@@ -180,7 +176,7 @@
 		</section>
 
 <!-- team section -->
-	<section id="lexmark3">
+	<section id="video" class="graybg">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
