--- a/vegout.html
+++ b/vegout.html
@@ -33,29 +33,27 @@
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
 	<!-- navigation section -->
-	<section id="navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
+<section id="navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
-
 			<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-
-			<a href="index.html" class="navbar-brand logo"><class="bold">M</a>
+			<a href="index.html" class="navbar-brand">MICHELLE KIM</a>
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="index.html#work" >WORK</a></li>
+				<li><a href="index.html#work">WORK</a></li>
 				<li><a href="index.html#about">ABOUT</a></li>
-				<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
 				<li><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf" class="smoothScroll">RESUME</a></li>
-
 			</ul>
 		</div>
 	</div>
-	</section>
+</section>
+
+
 	<!-- about section -->
 		<section id="about">
 			<div class="container">
@@ -120,7 +118,7 @@
 		</section>
 
 
-		<section id="lexmark1">
+		<section class="graybg">
 			<div class="container">
 				<br>
 				<br>
@@ -189,7 +187,7 @@
 		<br><br><br>
 
 		<!-- team section -->
-			<section id="lexmark2">
+			<section class="graybg">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12">
@@ -259,7 +257,7 @@
 			</div>
 			</section>
 
-			<section id="lexmark3">
+			<section class="graybg">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12">
@@ -288,7 +286,7 @@
 	  </div>
 	</section>
 
-	<section id="lexmark4">
+	<section class="graybg">
 		<div class="container">
 			<br><br><br>
 	<div class= "row">
@@ -334,7 +332,7 @@
 		</div>
 	</section>
 
-	<section id="lexmark6">
+	<section class="graybg">
 									             <div class="padding">
 									               <div class="container">
 																	 <div class="row">
@@ -387,7 +385,7 @@
   <br><br><br>
   </section>
 
-													 <section id="lexmark6">
+													 <section class="graybg">
 													 	<div class="container">
 													 		<div class="row">
 													 			<div class="col-md-12 col-sm-12 text-center">
