--- a/cnbc.html
+++ b/cnbc.html
@@ -36,22 +36,18 @@
 <section id="navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
-
 			<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-
-			<a href="index.html" class="navbar-brand logo"><class="bold">M</a>
+			<a href="index.html" class="navbar-brand">MICHELLE KIM</a>
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="index.html#work" >WORK</a></li>
-				<li><a href="index.html#about">ABOUT</a></li>
-				<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
+				<li><a href="#work">WORK</a></li>
+				<li><a href="#about">ABOUT</a></li>
 				<li><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf" class="smoothScroll">RESUME</a></li>
-
 			</ul>
 		</div>
 	</div>
@@ -118,7 +114,7 @@
 		</section>
 
 
-		<section id="lexmark3">
+		<section class="graybg">
 			<div class="container">
 				<br>
 				<br>
@@ -204,7 +200,7 @@
 	</div>
 </section>
 
-<section id="lexmark1">
+<section class="graybg">
 	<div class="container">
 		<br>
 		<br>
@@ -250,7 +246,7 @@
 			</div>
 	</section>
 
-	<section id="lexmark2">
+	<section class="graybg">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
@@ -303,7 +299,7 @@
 		</section>
 		<br><br><br>
 
-		<section id="lexmark4">
+		<section class="graybg">
 			<div class="container">
 				<br>
 				<br>
@@ -369,7 +365,7 @@
 				</div>
 			</div>
 
-			<section id="lexmark1">
+			<section class="graybg">
 				<div class="container">
 					<br>
 					<br>
@@ -421,7 +417,7 @@
 				</div>
 			</section>
 
-				<section id="lexmark6">
+				<section class="graybg">
 					<div class="container">
 						<br>
 						<br>
