--- a/comerica.html
+++ b/comerica.html
@@ -32,25 +32,25 @@
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
 	<!-- navigation section -->
-	<section id="navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="icon icon-bar"></span>
-					<span class="icon icon-bar"></span>
-					<span class="icon icon-bar"></span>
-				</button>
-				<a href="index.html" class="navbar-brand"><span class="bold">Michelle</span>Kim</a>
-			</div>
-			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="work.html" class="smoothScroll">WORK</a></li>
-					<li><a href="about.html" class="smoothScroll">ABOUT</a></li>
-					<li><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf">RESUME</a></li>
-				</ul>
-			</div>
+<section id="navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+			<button class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				<span class="icon icon-bar"></span>
+				<span class="icon icon-bar"></span>
+				<span class="icon icon-bar"></span>
+			</button>
+			<a href="index.html" class="navbar-brand">MICHELLE KIM</a>
 		</div>
-	</section>
+		<div class="collapse navbar-collapse" id="myNavbar">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#work">WORK</a></li>
+				<li><a href="#about">ABOUT</a></li>
+				<li><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf" class="smoothScroll">RESUME</a></li>
+			</ul>
+		</div>
+	</div>
+</section>
 
 <!-- home section -->
 	<section id="comerica">
