--- a/lexmark.html
+++ b/lexmark.html
@@ -15,6 +15,7 @@
 	<!-- SITE TITLE -->
 	<title>Lexmark</title>
 
+
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
@@ -33,7 +34,6 @@
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
 	<!-- navigation section -->
-
 <section id="navbar" class="navbar navbar-fixed-top custom-navbar" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
@@ -42,11 +42,11 @@
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="index.html" class="navbar-brand logo"><class="bold">M</a>
+			<a href="index.html" class="navbar-brand">MICHELLE KIM</a>
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="index.html#work" >WORK</a></li>
+				<li><a href="index.html#work">WORK</a></li>
 				<li><a href="index.html#about">ABOUT</a></li>
 				<li><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf" class="smoothScroll">RESUME</a></li>
 			</ul>
@@ -112,7 +112,7 @@
 			</div>
 		</section>
 
-		<section id="lexmark1">
+		<section class="graybg">
 			<div class="container">
 				<br>
 				<br>
@@ -197,7 +197,7 @@
 
 
 <!-- team section -->
-	<section id="lexmark2">
+	<section class="graybg">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
@@ -301,7 +301,7 @@
 		</div>
 	</section>
 
-	<section id="lexmark3">
+	<section class="graybg">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12">
@@ -415,7 +415,7 @@
 	</section>
 
 
-<section id="lexmark4">
+<section class="graybg">
 	<div class="container">
 		<br><br><br>
 <div class= "row">
@@ -464,7 +464,7 @@
 				            </div>
 				          </div>
 
-								<section id="lexmark5">
+								<section class="graybg">
 
 									<div class="padding">
 								             <div class="container">
@@ -514,7 +514,7 @@
 								               </div>
 								             </div>
 													 </section>
-<section id="lexmark6">
+<section class="graybg">
 								             <div class="padding">
 								               <div class="container">
 																 <div class="row">
