--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#work">WORK</a></li>
-				<li><a href="#about">ABOUT</a></li>
+				<li><a href="#me">ABOUT</a></li>
 				<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
 				<li><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf" class="smoothScroll">RESUME</a></li>
 			</ul>
@@ -167,7 +167,7 @@
 </section>
 
 
-<section id="about">
+<section id="me">
 	<div class="container">
 		<div class="row">
 		</div>
