--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</script>
 
 	<!-- SITE TITLE -->
-	<title>Michelle K, UX Designer</title>
+	<title>👩🏻‍💻Michelle Kim</title>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,7 +32,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 
