--- a/index.html
+++ b/index.html
@@ -32,30 +32,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 
 
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
-
-
-
-	<section id="introduction">
-		<div class="container">
-			<div class="row">
-					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-						<h1 class="introduction-text">My greatest strength as a designer is that I genuinely care about the people I serve. Accessibility & design ethics are huge passions of mine.</h1>
-							<p class="text-center">View My Work <i class="fas fa-long-arrow-alt-down"></i></p>
-
-					</div>
-					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-						<img src="images/me.jpg" width=100% alt="me at brooklyn">
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
 
 
 <!-- navigation section -->
@@ -71,10 +53,9 @@
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#work">WORK</a></li>
-				<li><a href="#me">ABOUT</a></li>
+				<li><a href="#work">work</a></li>
+				<li><a href="#me">about</a></li>
 				<!-- <li><a href="#resume" class="smoothScroll">RESUME</a></li> -->
-				<li><a target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf" class="smoothScroll">RESUME</a></li>
 			</ul>
 		</div>
 	</div>
@@ -83,6 +64,27 @@
 </head>
 
 <body>
+
+	<section id="introduction">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+					<img class="center" src="images/profilephoto.png" height="168" width="168" alt="me at brooklyn">
+				</div>
+					<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
+						<h1 class="introduction-text">👋 Fast paced, product thinking designer who loves details and thrives in ambiguity. </h1><br>
+						<h5>View My Work <i class="fas fa-long-arrow-alt-down"></i></h5>
+
+					</div>
+					<!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+						<img src="images/me.jpg" width=100% alt="me at brooklyn">
+					</div>
+				</div> -->
+			</div>
+		</div>
+	</section>
+
+
 <!-- Portfolio Section -->
 <section id="work">
 	<div class="container">
