--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
+<link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
 </head>
 
 
@@ -68,12 +68,14 @@
 	<section id="introduction">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+				<!-- <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 					<img class="center" src="images/profilephoto.png" height="168" width="168" alt="me at brooklyn">
-				</div>
-					<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-						<h1 class="introduction-text">👋 Fast paced, product thinking designer who loves details and thrives in ambiguity. </h1><br>
-						<h5>View My Work <i class="fas fa-long-arrow-alt-down"></i></h5>
+				</div> -->
+					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h5 class= "introduction-text text-center gelasio" >Ethical and robust designs by a fast paced, product thinking designer who loves details and thrives in amiguity	<i class="fas fa-long-arrow-alt-down logo center"></i>
+</h5>
+
+
 
 					</div>
 					<!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
